k8s-deployer/k8sYamls/conversation-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conversation-service
  labels:
    dixa-app: conversation-service
spec:
  selector:
    dixa-app: conversation-service
  ports:
    - port: 80
      targetPort: 8080
