k8s-deployer/k8sYamls/conversation-service/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: conversation-service
spec:
  host: conversation-service.default.svc.cluster.local
