k8s-deployer/k8sYamls/conversation-service/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: conversation-service
spec:
  hosts:
  - conversation-service
  # - conversation-service.chaos-canary.svc.cluster.local
  http:
  - name: 'production'
    route:
    - destination:
        host: conversation-service
      weight: 100
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: 5xx
    # mirror:
    #   host: conversation-service.chaos-canary.svc.cluster.local
    # mirrorPercentage: 
    #   value: 100

    # fault:
    #   delay:
    #     percentage:
    #       value: 0.1
    #     fixedDelay: 2s
    #   abort:
    #     percentage:
    #       value: 0.1
    #     httpStatus: 500
